--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-pasta==0.2.0
 grpcio==1.51.1
 h5py==3.8.0
 idna==3.4
+importlib-metadata==6.0.0
 imutils==0.5.4
 keras==2.11.0
 kiwisolver==1.4.4
@@ -31,10 +32,14 @@ protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
+PySide6==6.4.2
+PySide6-Addons==6.4.2
+PySide6-Essentials==6.4.2
 python-dateutil==2.8.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 rsa==4.9
+shiboken6==6.4.2
 six==1.16.0
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
@@ -48,3 +53,4 @@ typing_extensions==4.4.0
 urllib3==1.26.14
 Werkzeug==2.2.2
 wrapt==1.14.1
+zipp==3.12.1
