--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ protobuf==3.19.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.9
+pyqtgraph==0.13.1
 PySide6==6.4.2
 PySide6-Addons==6.4.2
 PySide6-Essentials==6.4.2
